--- a/MyApp/package.json
+++ b/MyApp/package.json
@@ -16,6 +16,6 @@
     "cordova-android": "~7.0.0",
     "cordova-browser": "^5.0.3",
     "cordova-plugin-inappbrowser": "^3.0.0",
-    "cordova-plugin-whitelist": "1"
+    "cordova-plugin-whitelist": "^1.3.3"
   }
 }
