--- a/MyApp/package.json
+++ b/MyApp/package.json
@@ -5,7 +5,8 @@
   "cordova": {
     "platforms": [
       "android",
-      "browser"
+      "browser",
+      "ios"
     ],
     "plugins": {
       "cordova-plugin-inappbrowser": {},
@@ -15,6 +16,7 @@
   "dependencies": {
     "cordova-android": "~7.0.0",
     "cordova-browser": "^5.0.3",
+    "cordova-ios": "^4.5.4",
     "cordova-plugin-inappbrowser": "^3.0.0",
     "cordova-plugin-whitelist": "^1.3.3"
   }
