--- a/MyApp/package.json
+++ b/MyApp/package.json
@@ -13,10 +13,15 @@
       "cordova-instagram-plugin": {},
       "cordova-plugin-x-socialsharing": {
         "ANDROID_SUPPORT_V4_VERSION": "24.1.1+"
-      }
+      },
+      "com-sarriaroman-photoviewer": {},
+      "com.darktalker.cordova.screenshot": {},
+      "es.keensoft.fullscreenimage": {}
     }
   },
   "dependencies": {
+    "com-sarriaroman-photoviewer": "^1.1.18",
+    "com.darktalker.cordova.screenshot": "git+https://github.com/gitawego/cordova-screenshot.git",
     "cordova-android": "^7.1.4",
     "cordova-browser": "^5.0.3",
     "cordova-instagram-plugin": "^0.5.7",
@@ -25,6 +30,7 @@
     "cordova-plugin-whitelist": "^1.3.3",
     "cordova-plugin-x-socialsharing": "^5.4.3",
     "cordova-universal-clipboard": "git+https://github.com/Visigo/CordovaClipboard.git",
+    "es.keensoft.fullscreenimage": "^0.2.10",
     "es6-promise-plugin": "^4.2.2"
   }
 }
